Fix plus button align

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -11,7 +11,7 @@
 
   &__cart-button {
     @media ($medium-up) {
-      padding-top: 1px;
+      padding-top: 2px;
     }
   }
 
