--- a/src/components/base/Button/Button.scss
+++ b/src/components/base/Button/Button.scss
@@ -206,4 +206,10 @@
       box-shadow: unset;
     }
   }
+
+  &--plus {
+    > div {
+      padding-top: 1px;
+    }
+  }
 }
